<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:background="@color/secondary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="Xin chào?\nNguyễn Văn A"
            android:textStyle="bold"
            android:textSize="20sp">
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user"
            android:layout_marginStart="36dp">
        </ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Chào mừng đến với UIT HealthCare"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="36dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBooking"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/appointment"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"

            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_calen1"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"

            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookingHistory"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/appointment_history"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_calen2"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecord"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/record"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_document"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"

            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppointmentResult"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/results"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_document2"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPayment"
        android:layout_marginHorizontal="36sp"
        android:layout_marginVertical="5dp"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/payment"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/btn_home"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:backgroundTint="@null"

        app:icon="@drawable/ic_home_pay"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@null"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_home"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="150dp">
    </ImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContact"
        android:layout_marginHorizontal="36sp"
        android:layout_marginVertical="30dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/detail"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/btn_home"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:backgroundTint="@null"

        app:icon="@drawable/ic_home_detail"
        app:iconGravity="textEnd"
        app:iconPadding="150dp"
        app:iconTint="@null"/>



</LinearLayout>