<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:background="@drawable/bg_homepage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="Xin chào!"
            android:textStyle="bold"
            android:textSize="24sp">
        </TextView>


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_user"
            android:layout_marginStart="16dp"
            >
        </ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Chào mừng đến với UIT HealthCare"
        android:textStyle="bold"
        android:textSize="20sp"

        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="36dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppointment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/appointment"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"

            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_calen1"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"

            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookingHistory"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/appointment_history"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_calen2"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecord"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/record"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_document"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"

            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppointmentResult"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/results"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/btn_home"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@null"

            app:icon="@drawable/ic_home_document2"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_home"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="120dp">
    </ImageView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContact"
        android:layout_marginHorizontal="36sp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/detail"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/btn_home"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:backgroundTint="@null"

        app:icon="@drawable/ic_home_detail"
        app:iconGravity="textEnd"
        app:iconPadding="150dp"
        app:iconTint="@null"/>


</LinearLayout>